--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -185,7 +185,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: #222;
   position: relative;
 }
@@ -244,7 +244,23 @@ button:active, .button:active {
   font-family: inherit;
 }
 
-input {
+.small-round-button {
+  font-size: 0.9rem;
+  font-weight: normal;
+  padding: 0.3rem 0.8rem;
+}
+
+.delete-button {
+  background-image: linear-gradient(90deg, red 0%, #f76363 50%, red 100%);
+  margin: 0.6rem;
+}
+
+.edit-button {
+  background-image: linear-gradient(to right, #233E8B 0%, #AA2EE6 50%, #233E8B 100%);
+  margin: 0.6rem;
+}
+
+input, select {
   border: none;
   outline: 0;
   background-color: #fff;
@@ -253,7 +269,7 @@ input {
   border-radius: 5px;
   transition: all ease-in-out 0.15s;
 }
-input:focus {
+input:focus, select:focus {
   transform: scale(1.005);
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
@@ -290,6 +306,42 @@ input:focus {
   font-weight: normal;
   font-size: 2rem;
   line-height: 1.5;
+}
+
+table {
+  border-collapse: collapse;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  border-radius: 1rem;
+  width: 100%;
+}
+
+caption {
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+}
+
+thead {
+  background: linear-gradient(150deg, #23049D, #233E8B);
+  border-radius: 1rem;
+}
+
+th {
+  color: #fff;
+}
+
+th, td {
+  text-align: left;
+  padding: 0.5rem;
+}
+
+td {
+  text-align: center;
+}
+
+tbody tr:nth-child(even) {
+  background: #fafafa;
 }
 
 .reveal {
