--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -6,6 +6,8 @@ $kindaPink: #FF79CD;
 $yellowish: #FFDF6B;
 $white: #fff;
 $dark: #222;
+$lightDark: #333;
+$black: #000;
 
 //Font sizes
 $font-sm: 0.875rem; //14px
