--- a/WebContent/app/css/_adminMain.scss
+++ b/WebContent/app/css/_adminMain.scss
@@ -13,16 +13,17 @@
     flex-flow: row wrap;
     width: 50%;
     padding: 0.5rem;
-    font-size: 0.95rem;
+    font-size: 1rem;
     label {
       display: block;
       width: 100%;
-      padding-bottom: 0.2rem;
+      padding-bottom: 0.4rem;
     }
     input,
     select {
       width: 100%;
-      font-size: 0.95rem;
+      font-size: 1rem;
+      padding: 1rem;
     }
     &_submit {
       width: 60%;
@@ -38,10 +39,21 @@
   &__preview {
     background-color: $white;
     padding: 1.2rem;
+    padding-bottom: 1.5rem;
     border-radius: 1rem;
     box-shadow: $shadow1;
     margin: 1rem;
+    height: max-content;
     flex: 1;
+    &_action{
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      justify-items: center;
+    }
+  }
+  &__table{
+    width: 100%;
   }
 }
 @include breakpoint-down(medium) {
