--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -168,6 +168,46 @@
     left: -15rem;
   }
 }
+@-webkit-keyframes toast-in {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+@keyframes toast-in {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes toast-out {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+@keyframes toast-out {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -215,6 +255,7 @@ body {
 }
 
 button, .button {
+  display: block;
   padding: 0.875rem 2.1875rem;
   border-radius: 50px;
   cursor: pointer;
@@ -226,7 +267,7 @@ button, .button {
   transition: all 0.3s ease-in-out;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
-button:hover, button:focus, .button:hover, .button:focus {
+button:hover, .button:hover {
   transform: scale(1.025);
   background-position: right center;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
@@ -243,21 +284,33 @@ button:active, .button:active {
   border-radius: 5px;
   font-family: inherit;
 }
+.flat-wide-button:hover, .flat-wide-button:focus {
+  transform: scale(1.025);
+  background-position: right center;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+.flat-wide-button:active {
+  transform: scale(0.95);
+  background-position: left center;
+}
 
 .small-round-button {
   font-size: 0.9rem;
   font-weight: normal;
   padding: 0.3rem 0.8rem;
+  margin: 0.3rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  flex: 1;
 }
 
 .delete-button {
   background-image: linear-gradient(90deg, red 0%, #f76363 50%, red 100%);
-  margin: 0.6rem;
 }
 
 .edit-button {
-  background-image: linear-gradient(to right, #233E8B 0%, #AA2EE6 50%, #233E8B 100%);
-  margin: 0.6rem;
+  background-image: linear-gradient(to right, #23049D 0%, #233E8B 50%, #23049D 100%);
 }
 
 input, select {
@@ -310,15 +363,15 @@ input:focus, select:focus {
 
 table {
   border-collapse: collapse;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
   border-radius: 1rem;
   width: 100%;
 }
 
-caption {
+caption, .caption {
   width: 100%;
   text-align: center;
-  padding: 0.5rem;
+  padding-bottom: 1rem;
   font-size: 1.2rem;
 }
 
@@ -332,7 +385,7 @@ th {
 }
 
 th, td {
-  text-align: left;
+  text-align: center;
   padding: 0.5rem;
 }
 
@@ -341,7 +394,44 @@ td {
 }
 
 tbody tr:nth-child(even) {
-  background: #fafafa;
+  background: #d7e3f5;
+}
+
+#snackbar {
+  visibility: hidden;
+  /* Hidden by default. Visible on click */
+  min-width: 250px;
+  /* Set a default minimum width */
+  margin-left: -125px;
+  /* Divide value of min-width by 2 */
+  background-color: #AA2EE6;
+  /* Black background color */
+  color: #fff;
+  /* White text color */
+  text-align: center;
+  /* Centered text */
+  border-radius: 2px;
+  /* Rounded borders */
+  padding: 16px;
+  /* Padding */
+  position: fixed;
+  /* Sit on top of the screen */
+  z-index: 999;
+  /* Add a z-index if needed */
+  left: 50%;
+  /* Center the snackbar */
+  bottom: 30px;
+  /* 30px from the bottom */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible;
+  /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: toast-in 0.5s, toast-out 0.5s 2.5s;
+  animation: toast-in 0.5s, toast-out 0.5s 2.5s;
 }
 
 .reveal {
