--- a/WebContent/app/css/admin-styles.css
+++ b/WebContent/app/css/admin-styles.css
@@ -313,6 +313,36 @@ button:active, .button:active {
   background-image: linear-gradient(to right, #23049D 0%, #233E8B 50%, #23049D 100%);
 }
 
+.float-right-btn {
+  position: absolute;
+  top: 0.8rem;
+  right: 1.2rem;
+  box-shadow: none;
+  background-image: linear-gradient(90deg, #AA2EE6 0%, #FF79CD 50%, #AA2EE6 100%);
+  font-size: 1rem;
+  font-weight: normal;
+  padding: 0.5rem 1rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  border-radius: 0.2rem;
+}
+.float-right-btn:hover {
+  transform: scale(1);
+  background-position: right center;
+  box-shadow: none;
+}
+.float-right-btn:active {
+  transform: scale(0.95);
+  background-position: left center;
+}
+@media (max-width: 59.9375em) {
+  .float-right-btn {
+    right: auto;
+    left: 1.2rem;
+  }
+}
+
 input, select {
   border: none;
   outline: 0;
@@ -399,39 +429,24 @@ tbody tr:nth-child(even) {
 
 #snackbar {
   visibility: hidden;
-  /* Hidden by default. Visible on click */
   min-width: 250px;
-  /* Set a default minimum width */
-  margin-left: -125px;
-  /* Divide value of min-width by 2 */
-  background-color: #AA2EE6;
-  /* Black background color */
+  background-color: #4974b4;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   color: #fff;
-  /* White text color */
   text-align: center;
-  /* Centered text */
-  border-radius: 2px;
-  /* Rounded borders */
-  padding: 16px;
-  /* Padding */
+  border-radius: 0.5rem;
+  padding: 1rem;
   position: fixed;
-  /* Sit on top of the screen */
-  z-index: 999;
-  /* Add a z-index if needed */
   left: 50%;
-  /* Center the snackbar */
+  transform: translate(-50%);
+  z-index: 999;
   bottom: 30px;
-  /* 30px from the bottom */
 }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
 #snackbar.show {
   visibility: visible;
-  /* Show the snackbar */
-  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-  However, delay the fade out process for 2.5 seconds */
   -webkit-animation: toast-in 0.5s, toast-out 0.5s 2.5s;
-  animation: toast-in 0.5s, toast-out 0.5s 2.5s;
+          animation: toast-in 0.5s, toast-out 0.5s 2.5s;
 }
 
 .reveal {
@@ -809,12 +824,9 @@ tbody tr:nth-child(even) {
   width: 60%;
   margin: 0 auto;
 }
-.main__form {
-  display: flex;
-  flex-flow: row wrap;
-}
 .main__form, .main__preview {
   background-color: #fff;
+  position: relative;
   padding: 1.2rem;
   padding-bottom: 1.5rem;
   border-radius: 1rem;
@@ -831,6 +843,14 @@ tbody tr:nth-child(even) {
   justify-content: center;
   justify-items: center;
 }
+.main__form {
+  display: flex;
+  flex-flow: row wrap;
+}
+.main__form_wide {
+  flex: none;
+  width: 55%;
+}
 .main__table {
   width: 100%;
 }
@@ -839,7 +859,7 @@ tbody tr:nth-child(even) {
   .main {
     flex-flow: column wrap;
   }
-  .main__form, .main__preview {
+  .main__form, .main__preview, .main__form_wide {
     flex: none;
     width: calc(100% - 2rem);
     margin: 1rem;
