--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -441,6 +441,8 @@ tbody tr:nth-child(even) {
   transform: translate(-50%);
   z-index: 999;
   bottom: 30px;
+  max-height: 70vh;
+  overflow-y: hidden;
 }
 
 #snackbar.show {
