--- a/WebContent/app/css/_adminMain.scss
+++ b/WebContent/app/css/_adminMain.scss
@@ -84,11 +84,12 @@
             td {
                  width: min-content;
             }
-                overflow-x: scroll;
-                scrollbar-color: auto;
-                scrollbar-width: thin;
+            overflow-x: scroll;
+            scrollbar-color: auto;
+            scrollbar-width: thin;
             &::-webkit-scrollbar {
-                width: 0.2rem;
+                width: 0.5rem;
+                height: 0.5rem;
             }
             &::-webkit-scrollbar-track {
                 background: $darkBlue;
@@ -96,9 +97,6 @@
             &::-webkit-scrollbar-thumb {
                 background: $lightPurple;
                 border-radius: 0.1rem;
-                &:hover {
-                    background: $lightPurple;
-                }
             }
         }
     }
