--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -451,6 +451,90 @@ tbody tr:nth-child(even) {
           animation: toast-in 0.5s, toast-out 0.5s 2.5s;
 }
 
+.overlaydiv {
+  position: fixed;
+  visibility: hidden;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 99;
+  width: 60vw;
+  height: 70vh;
+  box-shadow: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
+  background-color: #fff;
+  border-radius: 1rem;
+  padding: 1.2rem;
+  padding-top: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 59.9375em) {
+  .overlaydiv {
+    width: calc(100% - 2.4rem);
+    height: 80vh;
+    padding: 0 0.7rem 0.7rem 0.7rem;
+  }
+}
+.overlaydiv .scrollable {
+  width: 100%;
+  position: static;
+  max-height: 52vh;
+  overflow-y: scroll;
+  scrollbar-color: auto;
+  scrollbar-width: thin;
+}
+@media (max-width: 59.9375em) {
+  .overlaydiv .scrollable {
+    max-height: 65vh;
+    overflow-y: visible;
+    overflow-x: scroll;
+  }
+}
+.overlaydiv .scrollable::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+.overlaydiv .scrollable::-webkit-scrollbar-track {
+  background: #FF79CD;
+}
+.overlaydiv .scrollable::-webkit-scrollbar-thumb {
+  background: #AA2EE6;
+  border-radius: 0.1rem;
+}
+.overlaydiv .cross {
+  cursor: pointer;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  right: 1.2rem;
+  top: 1.5rem;
+}
+.overlaydiv .cross:active {
+  transform: scale(0.92);
+}
+.overlaydiv .cross > span {
+  width: 30px;
+  height: 0.25rem;
+  transform-origin: 4px;
+}
+.overlaydiv .cross > span:first-child {
+  transform: rotate(45deg);
+}
+.overlaydiv .cross > span:first-child:hover {
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+.overlaydiv .cross > span:nth-child(2) {
+  opacity: 0;
+}
+.overlaydiv .cross > span:last-child {
+  transform: rotate(-45deg);
+}
+.overlaydiv .cross > span:last-child:hover {
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+
 .reveal {
   -webkit-animation: reveal ease-in-out 0.3s forwards;
           animation: reveal ease-in-out 0.3s forwards;
@@ -469,6 +553,20 @@ tbody tr:nth-child(even) {
 .rotateByNeg90 {
   -webkit-animation: rotateByNeg90 ease-in-out 0.3s forwards;
           animation: rotateByNeg90 ease-in-out 0.3s forwards;
+}
+
+.fade-in {
+  visibility: hidden;
+  -webkit-animation: fade-in ease-in-out 0.3s forwards;
+          animation: fade-in ease-in-out 0.3s forwards;
+  visibility: visible;
+}
+
+.fade-in {
+  visibility: visible;
+  -webkit-animation: fade-in ease-in-out 0.3s forwards;
+          animation: fade-in ease-in-out 0.3s forwards;
+  visibility: hidden;
 }
 
 .slide-in {
@@ -515,6 +613,7 @@ tbody tr:nth-child(even) {
   height: 4px;
   border-radius: 2px;
   background: linear-gradient(90deg, #23049D, #AA2EE6);
+  opacity: 1;
   transition: all 0.2s ease-in-out;
   transform-origin: 2px 2px;
 }
