--- a/WebContent/app/css/_animations.scss
+++ b/WebContent/app/css/_animations.scss
@@ -102,3 +102,14 @@
   from {bottom: 30px; opacity: 1;}
   to {bottom: 0; opacity: 0;}
 }
+@keyframes loader
+{
+   0% { transform: rotate(0deg); }
+   100% { transform: rotate(360deg); }
+}
+
+@-webkit-keyframes loader /*Safari and Chrome*/
+{
+   0% { -webkit-transform: rotate(0deg); }
+   100% { -webkit-transform: rotate(360deg); }
+}
