--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -20,4 +20,6 @@ $shadow2: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 
 $shadow3: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 $shadow4: rgba(45, 37, 122, 0.56) 0px 22px 70px 4px;
 $shadow5: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-$toast-shadow:rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;;
+$shadow6: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+$shadow7: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+$toast-shadow:rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
