--- a/WebContent/app/css/_header.scss
+++ b/WebContent/app/css/_header.scss
@@ -67,6 +67,18 @@
                 }
             }
         }
+        &_dropdown{
+            &:hover{
+                &::before{
+                    visibility: hidden;
+                }
+                .dropdown-arrow{
+                    transition: all ease-in-out 0.2s;
+                    position: relative;
+                    top: 0.1rem;
+                }
+            }
+        }
     }
     &.open{
             .header__menu{
